# bergr

./: .gitignore  AGENT.md  CODEOWNERS  Cargo.toml  README.md  renovate.json
.agent/personas/: senior-agile-dev.md
.github/workflows/: ci.yml
docs/: educate-mike.md
docs/background/: iceberg-rust-datafusion.md  iceberg-rust.md  iceberg_rest_catalog_api.md
src/: aws.rs  catalog_commands.rs  cli.rs  commands.rs  data_location_manifest.rs  error.rs  file_existence.rs  lib.rs  main.rs  rest.rs  s3_lister.rs  table_commands.rs  terminal_output.rs
