[package]
name = "bergr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
aws-config = "1.8.11"
aws-credential-types = { version = "1.2.10", features = ["test-util"] }
aws-sdk-s3 = { version = "1.114.0", features = ["test-util"] }
aws-smithy-runtime = { version = "1.9.4", features = ["test-util"] }
aws-smithy-runtime-api = { version = "1.9.2", features = ["test-util"] }
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
http = "1.3.1"
iceberg = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"

[dev-dependencies]
aws-smithy-mocks = "0.2.1"
