[package]
name = "bergr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
async-trait = "0.1"
aws-config = "1.8.11"
aws-credential-types = "1.2.10"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
http = "1.3.1"
iceberg = { version = "0.7.0", features = ["storage-s3", "storage-memory"] }
reqsign = "0.16"
reqwest = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
