[package]
name = "bergr"
authors = ["Mike Williams <mikewilliams@block.xyz>"]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/block/bergr"
description = "CLI for inspecting Apache Iceberg tables"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
async-trait = "0.1"
aws-config = "1.8.11"
aws-credential-types = "1.2.10"
aws-sdk-s3 = "1.115.0"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
http = "1.3.1"
iceberg = { version = "0.8.0", features = ["storage-s3", "storage-memory"] }
iceberg-catalog-glue = "0.8.0"
iceberg-catalog-rest = "0.8.0"
reqsign = "0.16"
reqwest = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"
